--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/ConfigureCase.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/ConfigureCase.css
@@ -122,12 +122,14 @@
 /* Fix Select Dropdown Arrow */
 .case-assign-select {
   position: relative;
-  appearance: none; /* Removes default styling */
+  appearance: none;
+  /* Removes default styling */
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18"><path fill="%23007bff" d="M7 10l5 5 5-5H7z"/></svg>');
   background-repeat: no-repeat;
   background-position: right 12px center;
   background-size: 14px;
-  padding-right: 35px; /* Space for the arrow */
+  padding-right: 35px;
+  /* Space for the arrow */
   cursor: pointer;
 }
 
@@ -161,7 +163,7 @@
 }
 
 /* Assign button */
-.case-assign-btn {
+.submit-btn-case-assign-btn {
   padding: 14px;
   background: linear-gradient(to right, #007bff, #0056b3);
   color: white;
@@ -176,7 +178,15 @@
   width: 100%;
 }
 
-.case-assign-btn:hover {
+
+.submit-btn-case-assign-btn:disabled,
+.btn-disabled {
+  background-color: #a5b4fc;
+  cursor: not-allowed;
+}
+
+
+.submit-btn-case-assign-btn:hover {
   background: linear-gradient(to right, #0056b3, #003f7f);
   transform: scale(1.02);
 }
@@ -190,7 +200,7 @@
     border-radius: 3px;
   }
 
-  .case-assign-btn {
+  .submit-btn-case-assign-btn {
     font-size: 14px;
     padding: 12px;
   }
