--- a/src/Components/Mentee/MenteeDashboard/DashboardCSS/CaseStudyAssignList.css
+++ b/src/Components/Mentee/MenteeDashboard/DashboardCSS/CaseStudyAssignList.css
@@ -19,6 +19,10 @@
   background-color: #ffebee;
   color: #f44336;
 }
+.CaseShow-Mentee-case-status.inactive {
+  background-color: #ffebee;
+  color: #f44336;
+}
 
 .CaseShow-Mentee-container {
   font-family: "Lato", sans-serif;
