--- a/src/Pages/CaseStudyPages/SimulationPage.css
+++ b/src/Pages/CaseStudyPages/SimulationPage.css
@@ -1,9 +1,11 @@
 /* SimulationPage.css */
 .main-container {
-  margin-top: 4rem;
+  /* margin-top: 4rem; */
   display: flex;
-  min-height: calc(100vh - 60px); /* Adjust based on your navbar height */
-  padding: 20px 5px;
+  /* min-height: calc(100vh - 60px); */
+  /* padding: 20px 5px; */
+  height: 100dvh;
+  padding: 10px 5px;
   gap: 20px;
   background-color: #f5f5f7;
 }
@@ -45,7 +47,7 @@
   padding: 20px;
   padding-bottom: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  height: calc(100vh - 100px);
+  /* height: calc(100vh - 100px); */
   display: flex;
   flex-direction: column;
 }
