--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleAssignedCase.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleAssignedCase.css
@@ -737,12 +737,14 @@
   display: flex;
   flex-direction: column;
 }
-.casestudyShowModel-QuestionShow-close-button{
-    position: absolute;
-    right: 4rem;
-    border: none;
-    border-radius: 8px;
-    color: white;
-    cursor: pointer;
-    padding: 10px;
+
+.casestudyShowModel-QuestionShow-close-button {
+  position: absolute;
+  right: 4%;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  padding-right: 20px;
 }
