feat: Enhance ChatInterface with personalized greeting with mentee their name and improve loading state styles also handeled hide options when showing loading. Change button style on mentee notification page.

--- a/src/Components/CaseStudy/PurchasedCaseStudy/ChatInterface.css
+++ b/src/Components/CaseStudy/PurchasedCaseStudy/ChatInterface.css
@@ -323,6 +323,19 @@
   }
 }
 
+.greeting {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #2c3e50;
+  /* margin-bottom: 1rem; */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.greeting::before {
+  content: "👋 ";
+}
+
+
 /* Responsive adjustments for follow-up styles */
 @media (max-width: 768px) {
   .chat-interface-followup-question,
