--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleAssignedCase.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleAssignedCase.css
@@ -737,14 +737,20 @@
   display: flex;
   flex-direction: column;
 }
-
-.casestudyShowModel-QuestionShow-close-button {
+.casestudyShowModel-QuestionShow-close-button{
   position: absolute;
-  right: 4%;
-  border: none;
-  border-radius: 8px;
-  color: white;
-  cursor: pointer;
-  padding: 10px;
-  padding-right: 20px;
+    top: 0;
+    /* Align to top */
+    right: 0;
+    /* Align to right */
+    border: none;
+    border-radius: 20px;
+    color: white;
+    cursor: pointer;
+    padding: 0.5em;
+    background-color: gray;
+    opacity: 0.8;
+  }
+.casestudyShowModel-QuestionShow-close-button:hover {
+  opacity: 1;
 }
